--- a/app/templates/service_admin/view_invoice_for_finance.html
+++ b/app/templates/service_admin/view_invoice_for_finance.html
@@ -149,7 +149,7 @@
                         {% if not invoice.is_paid %}
                             <a class="button is-success" onclick="vm.warn({{ invoice.id }})">
                                 <span class="icon"><i class="fas fa-check"></i></span>
-                                <span>อนุมัติ</span>
+                                <span>ชำระเงินถูกต้อง</span>
                             </a>
                         {% endif %}
                         {% if invoice.paid_at and not invoice.is_paid %}
