--- a/app/templates/academic_services/view_quotation.html
+++ b/app/templates/academic_services/view_quotation.html
@@ -177,20 +177,20 @@
                                         </a>
                                     </li>
                                 {% endif %}
-                                <li>
-                                    <a class="button is-rounded is-outlined is-small is-fullwidth mb-2"
-                                       @click="printQuotation()"
-                                    >
-                                        <span class="icon"><i class="fas fa-print"></i></span>
-                                        <span>พิมพ์ใบเสนอราคา</span>
-                                    </a>
-                                </li>
+{#                                <li>#}
+{#                                    <a class="button is-rounded is-outlined is-small is-fullwidth mb-2"#}
+{#                                       @click="printQuotation()"#}
+{#                                    >#}
+{#                                        <span class="icon"><i class="fas fa-print"></i></span>#}
+{#                                        <span>พิมพ์ใบเสนอราคา</span>#}
+{#                                    </a>#}
+{#                                </li>#}
                                 <li>
                                     <a class="button is-info is-outlined is-rounded is-small is-fullwidth"
                                        href="{{ url_for('service_admin.export_quotation_pdf', quotation_id=quotation_id) }}"
                                     >
                                         <span class="icon"><i class="fas fa-download"></i></span>
-                                        <span>ดาวน์โหลด PDF</span>
+                                        <span>ดาวน์โหลดใบเสนอราคา</span>
                                     </a>
                                 </li>
                             </ul>
