--- a/app/templates/academic_services/view_request.html
+++ b/app/templates/academic_services/view_request.html
@@ -286,7 +286,7 @@
                                        href="{{ url_for('academic_services.export_request_pdf', request_id=service_request.id) }}"
                                     >
                                         <span class="icon"><i class="fas fa-clipboard-list"></i></span>
-                                        <span>พิมพ์ใบคำขอรับบริการ</span>
+                                        <span>ดาวน์โหลดใบคำขอรับบริการ</span>
                                     </a>
                                 </li>
                                 {% if service_request.quotations %}
@@ -297,7 +297,7 @@
                                                    href="{{ url_for('academic_services.export_quotation_pdf', quotation_id=quotation.id) }}"
                                                 >
                                                     <span class="icon"><i class="fas fa-file-invoice"></i></span>
-                                                    <span>พิมพ์ใบเสนอราคา</span>
+                                                    <span>ดาวน์โหลดใบเสนอราคา</span>
                                                 </a>
                                             </li>
                                             {% for invoice in quotation.invoices %}
@@ -309,7 +309,7 @@
                                                         >
                                                             <span class="icon"><i
                                                                     class="fas fa-file-invoice-dollar"></i></span>
-                                                            <span>พิมพ์ใบแจ้งหนี้</span>
+                                                            <span>ดาวน์โหลดใบแจ้งหนี้</span>
                                                         </a>
                                                     </li>
                                                     {% if invoice.receipts %}
@@ -320,7 +320,7 @@
                                                                 >
                                                                 <span class="icon"><i
                                                                         class="fas fa-file-invoice-dollar"></i></span>
-                                                                    <span>พิมพ์ใบเสร็จรับเงิน</span>
+                                                                    <span>ดาวน์โหลดใบเสร็จรับเงิน</span>
                                                                 </a>
                                                             </li>
                                                         {% endfor %}
