--- a/app/templates/service_admin/view_request.html
+++ b/app/templates/service_admin/view_request.html
@@ -340,7 +340,7 @@
                                        href="{{ url_for('service_admin.export_request_pdf', request_id=service_request.id) }}"
                                     >
                                         <span class="icon"><i class="fas fa-clipboard-list"></i></span>
-                                        <span>พิมพ์ใบคำขอรับบริการ</span>
+                                        <span>ดาวน์โหลดใบคำขอรับบริการ</span>
                                     </a>
                                 </li>
                                 {% if service_request.quotations %}
@@ -350,7 +350,7 @@
                                                href="{{ url_for('service_admin.export_quotation_pdf', quotation_id=quotation.id) }}"
                                             >
                                                 <span class="icon"><i class="fas fa-file-invoice"></i></span>
-                                                <span>พิมพ์ใบเสนอราคา</span>
+                                                <span>ดาวน์โหลดใบเสนอราคา</span>
                                             </a>
                                         </li>
                                         {% for invoice in quotation.invoices %}
@@ -362,7 +362,7 @@
                                                     >
                                                         <span class="icon"><i
                                                                 class="fas fa-file-invoice-dollar"></i></span>
-                                                        <span>พิมพ์ใบแจ้งหนี้</span>
+                                                        <span>ดาวน์โหลดใบแจ้งหนี้</span>
                                                     </a>
                                                 </li>
                                                 {% if invoice.receipts %}
@@ -373,7 +373,7 @@
                                                             >
                                                                 <span class="icon"><i
                                                                         class="fas fa-file-invoice-dollar"></i></span>
-                                                                <span>พิมพ์ใบเสร็จรับเงิน</span>
+                                                                <span>ดาวน์โหลดใบเสร็จรับเงิน</span>
                                                             </a>
                                                         </li>
                                                     {% endfor %}
