--- a/app/templates/service_admin/edit_draft_result.html
+++ b/app/templates/service_admin/edit_draft_result.html
@@ -43,7 +43,7 @@
                         <div class="field is-grouped is-grouped-centered">
                             <div class="control">
                                 <a href="{{ url_for('service_admin.result_index', menu=menu, tab=tab) }}"
-                                   class="button">ยกเลิก</a>
+                                   class="button">ย้อนกลับ</a>
                             </div>
                             <div class="control">
                                 <input type="submit" value="บันทึก" class="button is-success">
