--- a/app/templates/service_admin/quotation_approved_page.html
+++ b/app/templates/service_admin/quotation_approved_page.html
@@ -1,6 +1,6 @@
-{% extends "academic_services/service_base.html" %}
+{% extends "base.html" %}
 {% block title %}MUMT Internal Information System{% endblock %}
-{% include "academic_services/customer_nav.html" %}
+{% include "service_admin/admin_nav.html" %}
 {% block page_content %}
     <section class="section">
         <div class="container has-text-centered">
