--- a/app/templates/service_admin/edit_draft_result.html
+++ b/app/templates/service_admin/edit_draft_result.html
@@ -26,6 +26,17 @@
                                 {{ result_item.note }}
                             </div>
                         </div>
+                        <div class="field">
+                            <label class="label">ไฟล์{{ result_item.report_language }} (ฉบับร่าง)</label>
+                            <div class="control">
+                                <a class="button is-small is-link is-light is-rounded"
+                                   href="{{ url_for('service_admin.download_file', key=result_item.draft_file,
+                                   download_filename=result_item.report_language + ' ' + '(ฉบับร่าง)' + '.pdf') }}">
+                                    <span>{{ result_item.report_language + ' ' + '(ฉบับร่าง)' or 'ไม่ระบุภาษา' }}</span>
+                                    <span class="icon is-small"><i class="fas fa-download"></i></span>
+                                </a>
+                            </div>
+                        </div>
                         <label class="label">{{ result_item.report_language }}</label>
                         <div class="file" style="margin-bottom: .5em">
                             <label class="file-label">
