Edited url in view_request template of service_admin templates

--- a/app/templates/service_admin/view_request.html
+++ b/app/templates/service_admin/view_request.html
@@ -230,7 +230,7 @@
                                                     {% if item.final_file %}
                                                         <a {% if result.status.status_id == 22 %}
                                                             class="button is-small is-link is-light is-rounded is-fullwidth mb-2"
-                                                            href="{{ url_for('academic_services.download_file', key=item.final_file,
+                                                            href="{{ url_for('service_admin.download_file', key=item.final_file,
                                                                         download_filename=item.report_language + ' ' + '(ฉบับจริง)' + '.pdf') }}"
                                                         {% else %}
                                                             class="button is-small is-link is-light is-rounded is-fullwidth mb-2 Warn"
@@ -242,7 +242,7 @@
                                                         </a>
                                                     {% elif item.draft_file %}
                                                         <a class="button is-small is-link is-light is-rounded is-fullwidth mb-2"
-                                                           href="{{ url_for('academic_services.download_file', key=item.draft_file,
+                                                           href="{{ url_for('service_admin.download_file', key=item.draft_file,
                                                                                download_filename=item.report_language + ' ' + '(ฉบับร่าง)' + '.pdf') }}">
                                                             <span>{{ item.report_language + ' ' + '(ฉบับร่าง)' or 'ไม่ระบุภาษา' }}</span>
                                                             <span class="icon is-small"><i
