--- a/app/templates/procurement/nav_for_main.html
+++ b/app/templates/procurement/nav_for_main.html
@@ -12,20 +12,26 @@
                 <a class="navbar-item" href="{{ url_for('procurement.main_procurement_page') }}">
                     หน้าหลัก
                 </a>
-                <a class="navbar-item" href="{{ url_for('auth.account') }}">
-                    <span class="icon">
-                        <i class="fas fa-user-circle"></i>
-                    </span>
-                   <span>
-                       {{ current_user.personal_info.fullname }}
-                   </span>
-                </a>
-                <a class="navbar-item" href="{{ url_for('auth.logout') }}">
-                    <span class="icon">
-                        <i class="fas fa-sign-out-alt"></i>
-                    </span>
-                    <span>ออกจากระบบ</span>
-                </a>
+                {% if current_user.is_authenticated %}
+                    <a class="navbar-item" href="{{ url_for('auth.account') }}">
+                        <span class="icon">
+                            <i class="fas fa-user-circle"></i>
+                        </span>
+                       <span>
+                           {{ current_user.personal_info.fullname }}
+                       </span>
+                    </a>
+                    <a class="navbar-item" href="{{ url_for('auth.logout') }}">
+                        <span class="icon">
+                            <i class="fas fa-sign-out-alt"></i>
+                        </span>
+                        <span>ออกจากระบบ</span>
+                    </a>
+                {% else %}
+                    <a class="navbar-item" href="{{ url_for('auth.login') }}">
+                        ลงชื่อเข้าใช้
+                    </a>
+                {% endif %}
                 <a class="navbar-item" href="/">
                     <span>ปิด</span>
                     <span class="icon">
