--- a/app/templates/academic_services/create_customer_detail.html
+++ b/app/templates/academic_services/create_customer_detail.html
@@ -7,6 +7,7 @@
     {% include "academic_services/customer_nav.html" %}
     <section class="section">
         <div class="container">
+            {% include 'messages.html' %}
             <div class="columns">
                 <div class="column has-text-centered">
                     <h1 class="title">
