Edited change color of button in  request_index template of service_admin templates

--- a/app/templates/service_admin/request_index.html
+++ b/app/templates/service_admin/request_index.html
@@ -301,7 +301,7 @@
                                     '</div>' +
                                     '<div class="field has-addons">' +
                                     '<div class="control">' +
-                                    '<a class="button is-small is-link is-rounded" ' + 'href=' + sample_url + '>' +
+                                    '<a class="button is-small is-warning is-rounded" ' + 'href=' + sample_url + '>' +
                                     '<span class="icon">' +
                                     '<i class="fas fa-clipboard-check"></i>' +
                                     '</span>' +
