--- a/app/templates/academic_services/result_index.html
+++ b/app/templates/academic_services/result_index.html
@@ -104,7 +104,7 @@
                                         {% if result.approved_at and item.final_file %}
                                             <div class="field has-addons">
                                                 <div class="control">
-                                                    <a {% if item.result.status.status_id == 22 %}
+                                                    <a {% if item.result.request.status.status_id == 22 %}
                                                         class="button is-small is-link is-light is-rounded"
                                                         href="{{ url_for('academic_services.download_file', key=item.final_file,
                                                             download_filename=item.report_language + ' ' + '(ฉบับจริง)' + '.pdf') }}"
