Added placeholder in form of bacteria_request_form template and virus_disinfection_request_form template of academic_services and service_admin templates

--- a/app/templates/academic_services/forms/bacteria_request_form.html
+++ b/app/templates/academic_services/forms/bacteria_request_form.html
@@ -62,7 +62,7 @@
                                     <span class="has-text-danger">*</span>
                                 </label>
                                 <div class="control">
-                                    {{ form.product_appearance(class='input') }}
+                                    {{ form.product_appearance(class='input', placeholder='เช่น ของเหลว') }}
                                 </div>
                             </div>
                             <div class="field">
@@ -71,7 +71,7 @@
                                     <span class="has-text-danger">*</span>
                                 </label>
                                 <div class="contol">
-                                    {{ form.kind(class='input') }}
+                                    {{ form.kind(class='input', placeholder='เช่น ขวดพลาสติกมีฝาปิดสนิท') }}
                                 </div>
                             </div>
                             <div class="field">
@@ -80,7 +80,7 @@
                                     <span class="has-text-danger">*</span>
                                 </label>
                                 <div class="control">
-                                    {{ form.size(class='input') }}
+                                    {{ form.size(class='input', placeholder='เช่น 1 ลิตร') }}
                                 </div>
                             </div>
                             <div class="field">
@@ -158,7 +158,7 @@
                                             <span class="has-text-danger">*</span>
                                         </label>
                                         <div class="control">
-                                            {{ form.amount(class='input') }}
+                                            {{ form.amount(class='input', placeholder='เช่น 1 ขวด') }}
                                         </div>
                                     </div>
                                     <div class="field">
