Edited request_index template in service_admin templates

--- a/app/templates/service_admin/request_index.html
+++ b/app/templates/service_admin/request_index.html
@@ -82,16 +82,16 @@
                 <hr>
                 <table id='requests' class="table is-fullwidth">
                     <thead>
-                    <th>เลขใบคำร้องขอ</th>
-                    <th>ผู้ส่ง</th>
-                    <th>ใบเสนอราคา</th>
-                    <th>นัดหมายส่งตัวอย่าง</th>
-                    <th>รายการทดสอบ</th>
-                    <th>ใบแจ้งหนี้</th>
-                    <th>รายงานผลการทดสอบ</th>
-                    <th>สถานะ</th>>
-                    <th>รายละเอียด</th>
-                    <th></th>
+                        <th>เลขใบคำร้องขอ</th>
+                        <th>ผู้ส่ง</th>
+                        <th>ใบเสนอราคา</th>
+                        <th>นัดหมายส่งตัวอย่าง</th>
+                        <th>รายการทดสอบ</th>
+                        <th>ใบแจ้งหนี้</th>
+                        <th>รายงานผลการทดสอบ</th>
+                        <th>สถานะ</th>
+                        <th>รายละเอียด</th>
+                        <th></th>
                     </thead>
                     <tbody>
                     </tbody>
